unpackaged/main/default/objects/Tax_Code__c/Tax_Code__c.object-meta.xml
<CustomObject>
    <description>Used to store Tax code and rates that will be assigned to customers and calculated on quotes.</description>
    <label>Tax Code</label>
    <nameField>
        <label>Tax Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>