unpackaged/main/default/objects/Tax_Code__c/fields/GST_VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Type__c</fullName>
    <label>GST\VAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>NZGST</fullName>
            </value>
            <value>
                <fullName>MSST</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>PGT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>