unpackaged/main/default/objects/Tax_Code__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <label>Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>