unpackaged/main/default/objects/Tax_Code__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Papua New Guinea</fullName>
            </value>
            <value>
                <fullName>Other - From Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>