unpackaged/main/default/objects/Tax_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>GST_VAT_Type__c</columns>
    <columns>Rate_Code__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>